--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
+    "antd": "^4.16.2",
+    "firebase": "^8.6.5",
+    "firebase-admin": "^9.9.0",
     "next": "latest",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "babel-plugin-styled-components": "^1.12.0",
     "typescript": "4.0"
   },
   "license": "MIT"
