--- a/.env
+++ b/.env
@@ -7,6 +7,18 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=INSERT_STORAGE_BUCKET
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=INSERT_MESSAGING_SENDER_ID
 NEXT_PUBLIC_FIREBASE_APP_ID=INSERT_APP_ID
 
+# FIREBASE ADMIN
+FIREBASE_ADMIN_PRIVATE_KEY=INSERT_PRIVATE_KEY
+FIREBASE_ADMIN_CLIENT_EMAIL=INSERT_CLIENT_EMAIL
+
 # DISCORD
 NEXT_PUBLIC_DISCORD_APPLY_HOOK_URL=INSERT_APPLY_HOOK_URL
 NEXT_PUBLIC_DISCORD_LOG_HOOK_URL=INSERT_LOG_HOOK_URL
+
+# TINYMCE
+NEXT_PUBLIC_TINYMCE_API_KEY=INSERT_TINYMCE_API_KEY
+
+# COOKIES
+COOKIE_SECRET_CURRENT=S9s?nRCu&?SSCva7
+COOKIE_SECRET_PREVIOUS=lREoT4nn$mp!2iVk
+NEXT_PUBLIC_COOKIE_SECURE=true
