--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
-    "antd": "^4.16.2",
+    "@tinymce/tinymce-react": "^4.0.0",
+    "antd": "^4.20.0-alpha.1",
     "firebase": "^8.6.5",
-    "firebase-admin": "^9.9.0",
+    "firebase-admin": "^10.0.2",
     "next": "latest",
+    "next-absolute-url": "^1.2.2",
+    "next-firebase-auth": "^0.14.3",
+    "nookies": "^2.5.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-html-parser": "^2.0.2",
+    "sanitize-html": "^2.7.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
@@ -22,7 +28,7 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "babel-plugin-styled-components": "^1.12.0",
-    "typescript": "4.0"
+    "typescript": "^4.3.2"
   },
   "license": "MIT"
 }
