--- a/package.json
+++ b/package.json
@@ -16,18 +16,22 @@
     "next": "latest",
     "next-absolute-url": "^1.2.2",
     "next-firebase-auth": "^0.14.3",
-    "nookies": "^2.5.2",
     "react": "^17.0.1",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^17.0.1",
     "react-html-parser": "^2.0.2",
     "sanitize-html": "^2.7.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^12.1.6",
     "@types/node": "^12.12.21",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "babel-plugin-import": "^1.13.5",
+    "babel-plugin-inline-import": "^3.0.0",
     "babel-plugin-styled-components": "^1.12.0",
+    "path": "^0.12.7",
     "typescript": "^4.3.2"
   },
   "license": "MIT"
